--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+#ELK_VERSION should be editted to keep upto date with the latest ELK releases. To find the latest version visit https://www.elastic.co/guide/en/elasticsearch/reference/current/es-release-notes.html
 ELK_VERSION=8.11.2
